force-app/main/default/objects/Expense__c/fields/MonthDate__c.field-meta.xml
<CustomField>
    <fullName>MonthDate__c</fullName>
    <formula>CASE(MONTH(Expense_Date__c), 01, &apos;January&apos;, 02, &apos;February&apos;, 03, &apos;March&apos;, 04, &apos;April&apos;, 05, &apos;May&apos;, 06, &apos;June&apos;, 07, &apos;July&apos;, 08, &apos;August&apos;, 09, &apos;September&apos;, 10, &apos;October&apos;, 11, &apos;November&apos;, 12, &apos;December&apos;, &apos;&apos;)</formula>
    <label>Month Date</label>
    <type>Text</type>
</CustomField>