force-app/main/default/objects/Expense__c/fields/Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Recurrence__c</fullName>
    <label>Recurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unique</fullName>
                <default>true</default>
                <label>Unique</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>