force-app/main/default/objects/Expense__c/fields/RecurrencesQuantity__c.field-meta.xml
<CustomField>
    <fullName>RecurrencesQuantity__c</fullName>
    <label>Recurrences Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>